Fix checkbox vertical alignment in settings
- Added margin: 0 to remove default browser margins
- Added vertical-align: middle for better alignment with labels

--- a/static/styles.css
+++ b/static/styles.css
@@ -335,6 +335,8 @@ html {
 .toggle input[type="checkbox"] {
   width: 18px;
   height: 18px;
+  margin: 0;
+  vertical-align: middle;
 }
 
 .toggle span {
